# hpc4ds

./: .gitignore  LICENSE  README.md
matrix_vector_mult/src/: mat_vect_mult.c
navier_strokes/: .gitignore  CMakeLists.txt  LICENSE  README.md  grid_elab_2.ipynb  grid_elaboration.ipynb  simulation.json  simulations.json
navier_strokes/configs/: config.h.in
navier_strokes/hpc/: navierstokes  navierstokes.sh  simulation_bars.json  simulation_vortex.json  simulation_wall.json  simulations.json
navier_strokes/hpc/pbs/: navierstokes_LOC_TESTING_1_node_1_worker.sh  navierstokes_multi_node_multi_worker.sh  navierstokes_multi_node_multi_worker_random.sh  navierstokes_multi_node_single_worker.sh  navierstokes_multi_node_single_worker_random.sh  navierstokes_single_node_multi_worker.sh
navier_strokes/hpc/pbs_scripts/: navierstokes_multi_node.sh  navierstokes_multi_node_random.sh  navierstokes_multi_node_single_worker.sh  navierstokes_single_node.sh
navier_strokes/include/navierstokes/: config.h
navier_strokes/include/ns/: config.h  solver.h
navier_strokes/include/ns/nodes/: master.h  worker.h
navier_strokes/include/ns/nodes/com/: message.h
navier_strokes/include/ns/utils/: file.h  logger.h  parser.h  stringify.h  time_measure.h  time_measurement.h
navier_strokes/notebook/: grid_elab_2.ipynb  grid_elaboration.ipynb  java_c_comparison.ipynb
navier_strokes/ns_java/: output.txt  pom.xml
navier_strokes/ns_java/src/main/java/: GUI.java  Main.java  NavierStokesSolver.java  Render.java
navier_strokes/src/: grid_elaboration.ipynb  main.c  navier_stokes.c  navier_stokes.h  solver.c  test.h  utils.c  utils.h
navier_strokes/src/comms/: comms_master.c  comms_master.h  comms_slave.c  comms_slave.h  comms_worker.c  comms_worker.h
navier_strokes/src/nodes/: master.c  worker.c
navier_strokes/src/nodes/com/: message.c
navier_strokes/src/ns/: ns_parser.c  ns_parser.h  ns_solver.c  ns_solver.h  ns_stringify.c  ns_stringify.h
navier_strokes/src/utils/: file.c  logger.c  parser.c  stringify.c  time_measure.c  time_measurement.c
pingpong/: CMakeLists.txt
pingpong/src/: elab.py  main.c
ring/: CMakeLists.txt
ring/src/: main.c  ring.c
trapezoidal/: CMakeLists.txt
trapezoidal/src/: main.c
